# mcp-sweden

./: .gitignore  Dockerfile  README.md  pyproject.toml  smithery.yaml
src/mcp_sweden/: __init__.py  __main__.py  exceptions.py  server.py  settings.py
src/mcp_sweden/_shared/: __init__.py  cache.py  feature.py  http_client.py  rate_limiter.py
src/mcp_sweden/data/: __init__.py
src/mcp_sweden/data/avanza/: __init__.py  client.py  schemas.py  server.py  tools.py
src/mcp_sweden/data/begagnad/: __init__.py  client.py  schemas.py  server.py  tools.py
src/mcp_sweden/data/bolagsverket/: __init__.py  client.py  schemas.py  server.py  tools.py
src/mcp_sweden/data/kolada/: __init__.py  client.py  schemas.py  server.py  tools.py
src/mcp_sweden/data/riksdag/: __init__.py  client.py  schemas.py  server.py  tools.py
src/mcp_sweden/data/scb/: __init__.py  client.py  schemas.py  server.py  tools.py
src/mcp_sweden/data/skolverket/: __init__.py  client.py  schemas.py  server.py  tools.py
src/mcp_sweden/data/sl/: __init__.py  client.py  schemas.py  server.py  tools.py
src/mcp_sweden/data/solar/: __init__.py  client.py  schemas.py  server.py  tools.py
src/mcp_sweden/data/sverigesradio/: __init__.py  client.py  schemas.py  server.py  tools.py
tests/: test_avanza.py  test_begagnad.py  test_bolagsverket.py  test_riksdag.py  test_scb.py  test_skolverket.py  test_sl.py  test_solar.py  test_sverigesradio.py
web/: next.config.ts  package-lock.json
web/app/: globals.css  layout.tsx  page.tsx
